--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
         </activity>
         <activity android:name=".MapsActivity">
         </activity>
+        <activity android:name=".CompassActivity"/>
     </application>
 
 </manifest>
