--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,12 @@ android {
 
     defaultConfig {
         applicationId "smartcompass.teamdz.com.smartcompass2018"
-        minSdkVersion 14
+        minSdkVersion 23
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -33,5 +34,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     //noinspection GradleCompatible
     compile 'com.android.support:appcompat-v7:26.0.2'
+    compile 'com.android.support.constraint:constraint-layout:1.1.2'
     compile 'com.google.android.gms:play-services:8.4.0'
 }
