--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,9 @@
         <activity android:name=".ui.maps.MapsActivity">
         </activity>
         <activity android:name=".ui.compass.CompassActivity"/>
+        <service
+            android:name=".data.location.CompassLocation"
+            android:exported="false"/>
     </application>
 
 </manifest>
