--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
         </activity>
         <activity android:name=".ui.compass.CompassActivity"/>
         <service
-            android:name=".data.location.CompassLocation"
+            android:name=".service.location.CompassLocationService"
             android:exported="false"/>
     </application>
 
