--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
         </activity>
         <activity android:name=".ui.maps.MapsActivity">
         </activity>
+        <activity android:name=".ui.maps.MapActivityExample"/>
         <activity android:name=".ui.compass.CompassActivity"/>
         <service
             android:name=".service.location.CompassLocationService"
