--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,10 +36,11 @@ allprojects {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    implementation  fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     //noinspection GradleCompatible
-    compile 'com.android.support:appcompat-v7:26.0.2'
-    compile 'com.google.android.gms:play-services:12.0.0'
-    compile 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation  'com.android.support:appcompat-v7:26.1.0'
+    implementation  'com.android.support:design:26.1.0'
+    implementation  'com.google.android.gms:play-services:12.0.0'
+    implementation  'com.android.support.constraint:constraint-layout:1.1.2'
 }
