--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="smartcompass.teamdz.com.smartcompass2018">
 
+    <uses-feature android:name="android.hardware.sensor.accelerometer"
+        android:required="true"/>
+    <uses-feature android:name="android.hardware.sensor.compass"
+        android:required="true"/>
+    
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
