--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     //noinspection GradleCompatible
     implementation  'com.android.support:appcompat-v7:26.1.0'
     implementation  'com.android.support:design:26.1.0'
-    implementation  'com.google.android.gms:play-services:12.0.0'
+    //noinspection UseOfBundledGooglePlayServices
+    implementation  'com.google.android.gms:play-services:11.0.0'
     implementation  'com.android.support.constraint:constraint-layout:1.1.2'
 }
