--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,6 @@ dependencies {
     //noinspection UseOfBundledGooglePlayServices
     implementation  'com.google.android.gms:play-services:11.0.0'
     implementation  'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.google.android.gms:play-services-ads:11.0.0'
+
 }
