--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,8 +33,8 @@
         <activity android:name=".ui.maps.MapsActivity">
         </activity>
         <activity android:name=".ui.calibrate.CalibrateActivity"/>
-        <activity android:name=".ui.SettingActivity"/>
-        <activity android:name=".ui.ActivityAboutUs"/>
+        <activity android:name=".ui.settings.SettingActivity"/>
+        <activity android:name=".ui.settings.ActivityAboutUs"/>
 
         <service
             android:name=".service.location.CompassLocationService"
