--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,6 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
-        multiDexEnabled true
 
     }
     buildTypes {
@@ -37,14 +36,15 @@ allprojects {
 }
 
 dependencies {
-    implementation  fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     //noinspection GradleCompatible
-    implementation  'com.android.support:appcompat-v7:26.1.0'
-    implementation  'com.android.support:design:26.1.0'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
     //noinspection UseOfBundledGooglePlayServices
-    implementation  'com.google.android.gms:play-services:11.0.0'
-    implementation  'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation 'com.google.android.gms:play-services-ads:11.0.0'
+    implementation 'com.google.android.gms:play-services-location:15.0.1'
+    implementation 'com.google.android.gms:play-services-maps:15.0.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.google.android.gms:play-services-ads:15.0.1'
 
 }
