--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,26 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.LOCATION" />
 
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature android:name="android.hardware.camera" />
+
+    <meta-data
+        android:name="android.support.VERSION"
+        android:value="25.3.1" />
+    <meta-data
+        android:name="com.google.android.gms.version"
+        android:value="@integer/google_play_services_version" />
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -24,18 +44,24 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-        <activity android:name=".ui.compass.CompassActivity">
+        <activity android:name=".ui.compass.CompassActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.maps.MapsActivity">
-        </activity>
-        <activity android:name=".ui.calibrate.CalibrateActivity"/>
-        <activity android:name=".ui.settings.SettingActivity"/>
-        <activity android:name=".ui.settings.ActivityAboutUs"/>
-
+        <activity android:name=".ui.maps.MapsActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ui.calibrate.CalibrateActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ui.settings.SettingActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ui.settings.ActivityAboutUs"
+            android:screenOrientation="portrait"/>
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
         <service
             android:name=".service.location.CompassLocationService"
             android:exported="false"/>
