--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,8 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".ui.settings.ActivityAboutUs"
             android:screenOrientation="portrait"/>
+        <activity android:name=".ui.address.AddressActivity"
+            android:screenOrientation="portrait"/>
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
