--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="smartcompass.teamdz.com.smartcompass2018">
 
-    <uses-feature android:name="android.hardware.sensor.accelerometer"
-        android:required="true"/>
-    <uses-feature android:name="android.hardware.sensor.compass"
-        android:required="true"/>
+    <uses-feature
+        android:name="android.hardware.sensor.accelerometer"
+        android:required="true" />
+    <uses-feature
+        android:name="android.hardware.sensor.compass"
+        android:required="true" />
 
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -16,11 +18,11 @@
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.CAMERA" />
 
@@ -44,29 +46,37 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-        <activity android:name=".ui.compass.CompassActivity"
+
+        <activity
+            android:name=".ui.compass.CompassActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.maps.MapsActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".ui.calibrate.CalibrateActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".ui.settings.SettingActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".ui.settings.ActivityAboutUs"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".ui.address.AddressActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".ui.maps.MapsActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.calibrate.CalibrateActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.settings.SettingActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.settings.ActivityAboutUs"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.address.AddressActivity"
+            android:screenOrientation="portrait" />
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         <service
             android:name=".service.location.CompassLocationService"
-            android:exported="false"/>
+            android:exported="false" />
     </application>
 
 </manifest>
