--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "26.0.2"
 
     defaultConfig {
-        applicationId "smartcompass.teamdz.com.smartcompass2018"
+        applicationId "com.namdin.compasspro"
         minSdkVersion 19
         targetSdkVersion 26
         versionCode 1
